--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 NODE_ENV='dev'
 APP_PORT=3000
+MAIL_USERNAME="mail.gakwandi@gmail.com"
+MAIL_PASSWORD="testingmail@5k$2020"
+MAIL_SERVICE='gmail'
+MAIL_HOST='smtp.gmail.com'
+MAIL_FROM='BFF WHMS'
